<resources>
    <string name="app_name">Marks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5">A</string>
    <string name="_4">B</string>
    <string name="_3">C</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="baho_qo_yish">Baho qo\'yish</string>
</resources>